Assigned notes to categories and fixed naming convention error within writeups directory

--- a/2019-03-28-diehard.md
+++ b/2019-03-28-diehard.md
@@ -1,7 +1,7 @@
 ---
 title:  "Lecture Notes: DieHard"
 date:   2019-03-28 09:00:00
-categories: lecture 
+categories: notes lecture
 layout: post
 author: Robert Walls
 ---
