--- a/2019-03-14-lecture02.md
+++ b/2019-03-14-lecture02.md
@@ -1,7 +1,7 @@
 ---
 title:  "Lecture Notes: Stack Smashing an Code Injection"
 date:   2019-03-15 09:00:00
-categories: lecture 
+categories: notes lecture
 layout: post
 ---
 
