reworking notes titles.

--- a/2019-03-12-stack1.md
+++ b/2019-03-12-stack1.md
@@ -1,7 +1,7 @@
 ---
-title:  "Solving stack1r"
+title:  "Quick Notes: Solving stack1r"
 date:   2019-03-12 09:00:00
-categories: notes
+categories: notes quick
 layout: post
 ---
 
