--- a/2019-03-18-stack4.md
+++ b/2019-03-18-stack4.md
@@ -1,7 +1,8 @@
 ---
-title:  "Stack4"
+title:  "Writeup: Stack4"
 date:   2019-03-18 10:00:00
 categories: writeup
+author: Robert Walls
 layout: post
 ---
 
