--- a/2019-04-08-ASLR.md
+++ b/2019-04-08-ASLR.md
@@ -5,28 +5,53 @@ categories: notes lecture
 layout: post
 ---
 
-One of the most popular ways to defend against exploits is by randomizing the
-address space layout. This makes it difficult for attackers to find gadgets,
-any of address of a libc function, the stack, and the heap by changing the
-position of key data structures and libraries with every new process spawned.
-If an attacker attempted to brute force, its chances of hitting all the right
-addresses is 1 in millions (if you want to learn more about the actual
-probability check out this [link](https://pax.grsecurity.net/docs/aslr.txt) 
-for the actual calculations) in a 32-bit system. The chances are even slimmer 
-for an attacker to succeeded via trial and error with a 64-bit address space. Modern 
-systems also include other restrictions such as preventing a program from
-executing for a fixed amount of time if it has crashed a given number of
-times. This will further hinder attackers with more sophisticated brute force
-attacks. For example, for a return-to-libc attack you only need ONE address
-pertaining to libc to find any function in the shared library. The offsets are
-always fixed even if the base address of libc is randomized.
+
+One of the most commonly deployed defenses is **address space layout
+randomization (ASLR)**. As the name suggests, ASLR randomizes the address space
+layout to make it difficult for attackers to find gadgets, the address of libc
+functions, the objects on the stack, and the objects in the heap. Intuitively,
+if the attacker does not know these addresses than constructing a working
+exploit becomes significantly more difficult.
+
+
+While there are many different proposed and implemented variations of ASLR this
+post will focus on the [version proposed by the PAX
+team](https://pax.grsecurity.net/docs/aslr.txt) and implemented in Linux 32-bit
+and 64-bit systems.
+
+
+### The Basics 
+
+In 32-bit Linux, ASLR randomizes the starting locating for three areas of memory: 
+ - the **executable area** which contains the code, initialized data, and
+   unitiliated data,
+ - the **mapped area** which contains dynamically linked libraries, the heap,
+   and thread stacks, 
+ - and the **stack area** which contains the main user stack. 
+
+The starting location for each area, also called the base offset, is selected
+randomly for each area at process start. In other words, each region will be
+given a different base offset for each execution of the program. 
+
+There are restrictions for what those random offsets can be.  Take the mapped
+area for example, while the base address is a 32-bit number ASLR will only
+randomize bits 12-27. ASLR won't randomize bits 0-11 because it would break
+page alignment and it won't randomize bits 28-31 because that would make it
+harder to allocate big pages.  [1][aslr-problems]. As a result of these
+restrictions, there are only 2^16 possible starting offsets for the mapped
+area. In other words, ASLR provides 16 bits of randomness for the mapped area.
+The stack and executable areas have similar restrictions and ASLR provides 24
+and 16 bits of randomness for those areas, respectively.
+
 
 ### Example
 
-We will show a quick example of what ASLR does. First, lets turn it on. To turn
-ASLR on in Ubuntu run `echo 2 | sudo tee /proc/sys/kernel/randomize_va_space` and
-if you want to turn it off run `echo 0 | sudo tee
-/proc/sys/kernel/randomize_va_space`. Now consider this simple C program:
+Now lets take a quick glance at what  ASLR actually looks like from the
+perspective of a user on a 64-bit system. First, let's turn it on (though it is probably enabled
+by default). To turn ASLR on in Ubuntu run `echo 2 | sudo tee
+/proc/sys/kernel/randomize_va_space` and if you want to turn it off run `echo 0
+| sudo tee /proc/sys/kernel/randomize_va_space`. Now consider this simple C
+program:
 
 
 ```c
@@ -39,9 +64,9 @@ int main(int argv, char **argc){
 }
 ```
 
-save it as `aslr.c` and compile it by running `gcc -c aslr.c`. Next, link 
-the .o file to create the executable by running `gcc aslr.o -o
-aslr`. Now ran the program a few times. You will see something like this:
+Save this code as `aslr.c` and compile it by running `gcc -c aslr.c`. Next,
+link the .o file to create the executable by running `gcc aslr.o -o aslr`. Now
+run the program a few times. You should see something like this:
 
 ```
 $ ./aslr
@@ -53,11 +78,15 @@ The address of target: 0x7ffeae3f9a54
 $ ./aslr
 The address of target: 0x7ffec254dde4
 ```
-you can see the first 3 bits are constant but the remaining ones are completely
-random. This is ASLR's doing. The variable target is placed on the stack but
-every time we a new process by calling `./aslr` the stack is moved. Lets also
-look where libc (we're calling printf from this library) is located with every
-new process. Run `ldd aslr` a few times and we get
+
+You can see that the address of target is different for every execution.  The
+first 3 bits and the last 4 bits appear to be constant but the remaining bits
+change for every execution. This is ASLR's doing. The variable target is placed
+on the stack but every time we a start new process (by calling `./aslr`) the
+stack is moved. 
+
+Lets also look where libc (we're calling printf from this library) is located
+with every new process. Run `ldd aslr` a few times and we get
 
 ```
 $ ldd aslr
@@ -76,25 +105,66 @@ $ ldd aslr
     /lib64/ld-linux-x86-64.so.2 (0x00007fd94c333000)
 ```
 
-Again, the first couple bytes stay the same, however the remaining ones are
-randomized.
+Again, the leading bits and the last 12 bits stay the same, however the
+remaining bits are randomized.
 
 ### Defeating ASLR
 
-ASLR is unfortunately not the silver bullet that will strike down binary exploits like
-buffer overflows and return-to-libc attacks. This defense can be easily
-defeated if the attacked binary has an information leak. This means, that the
-program exposes addresses that allows the attacker to find, for example, the
-stack, the heap, or some function in libc. A very basic example of an
-information leak is using `printf` without `%s` when taking in user input. An attacker
-using `%x` multiple times as input can leak addresses pertaining to the stack
-as well as the canary, another security mitigation technique. 
+Importantly, ASLR does not randomize *within* within each area.  What does this
+mean for security? To answer this question, let's consider a simple
+return-to-libc attack that exploits a buffer overflow. To execute this attack,
+the attacker needs to know the address of `system` (which is in the mapped
+area) and the address of the attacker-supplied string to pass to system (which
+is on the stack).  In a perfect world, this means the attacker has to deal
+16+24 bits of randomness (on a 32-bit system), i.e., it is extremely unlikely
+that the attacker will correctly guess the address of system  and the address
+of the argument string in the randomize address space layout. Further, the
+attacker has to get it right on the first try, otherwise the process will crash
+and the new process will have a completely different random layout.  As Shacham
+et al. point out in their seminal [paper][aslr-problems], in the real world
+ASLR has a few problems.
 
-You might wonder what's the point of knowing this information if those addresses will change
-once execution ends. There exists tools, like pwntools, that can start a new
-process, read output from the program, and programmatically craft input for
-the process based on the output obtained. If you want to learn more read the
-post on pwntools.
+The first problem is the one we mentioned above: ASLR does not randomize within
+each area. This decision is great for performance and simplicity of
+implementation, but once the attacker can determine one known address in the
+area they effectively know all other addresses in that area. For example, the
+functions `usleep` and `system` are always the same distance apart for the same
+version of libc. So if the attacker figures out the address of `usleep` they
+now know the address of `system` as well. This lack of internal randomization
+is also a problem on the stack and the heap for similar reasons.  
+
+So how does the attacker learn figure out one of these addresses? One way is
+through a memory leak. For example, an attacker can use a format string
+vulnerability to print out the contents of the stack and the stack contains
+pointers into both the *executable area* (e.g., saved return addresses) and the
+*stack area* (e.g., saved frame pointers). Another technique, described by
+Shacham et al, is to guess until you get it right. It might seem like 1 in 2^16
+is bad odds for the attacker,  But to understand why the guessing technique
+works we have to understand the next major problem with ASLR.   
+
+The second problem is that ASLR randomizes at function start but does not
+re-randomize on a process fork. In other words, the forked process will have
+the exact same layout as the parent process. While there are 2^16=65,536
+possible locations for `system`, with forking the attacker can guess all
+possible locations.  In the Shacham paper, they describe how this problem leads
+to an attacker being able to exploit a webserver by guessing the locations
+needed for a return-to-libc attack---the whole attack only requires  a few
+minutes of guessing to succeed.  
+
+[aslr-problems]:/papers/aslr.pdf
+
+Fortunately, the guessing attack described above becomes impractical on 64-bit 
+systems given the much much much larger address space.
+
+
+### Final Thoughts 
+
+You might wonder what's the point of an information leak if your exploit is
+statically crafted and all of those addresses you leak will change once
+execution ends. There exists tools, like pwntools, that you can use to start a
+new process, read output from the program, and programmatically craft your
+exploit string for the process based on the output obtained. If you want to
+learn more read the post on pwntools.
 
 Attackers can also spray the heap with hundreds useful gadgets (`pop rdi` for
 instance), nop sleds (`0x90`), and some shellcode (a trick that attackers use
