How to find what address caused a segfault

--- a/2019-03-14-gdb.md
+++ b/2019-03-14-gdb.md
@@ -30,7 +30,7 @@ of gdb.
  - Be careful though, `si` and `ni` seem to skip over `int3` instructions.
 
 **Working with registers:**
- - Getting values: `info registers`
+ - Getting values: `info registers` or `i r`
  - Setting values: `set $eax=0`
 
 **Getting infromation:**
@@ -47,6 +47,7 @@ of gdb.
  - Use `backtrace` to find out where you where in a program when it crashed, e.g.,
 after a segmentation fault. Caveat, if your bug smashes the stack then the
 backtrace won't be able to make much sense of where you are.
+ - To find what address caused a segmentation fault: `p $_siginfo._sifields._sigfault.si_addr`. If it shows `(void *) 0x0` (or a small number), then you have a NULL pointer dereference.
 
 
 **Pagination:**
