--- a/writeups/2019-04-14-format0.md
+++ b/writeups/2019-04-14-format0.md
@@ -1,4 +1,13 @@
-Format0 is the first of the format binary explotation challenges for us to solve. 
+---
+title:  "Writeup: format0"
+date:   2019-04-14 8:18:00
+categories: writeup
+layout: post
+author: Amanda Ezeobiejesi
+---
+
+
+format0 is the first of the format binary explotation challenges for us to solve. 
 
 We are given the following source code:
 
@@ -102,4 +111,4 @@ you have hit the target correctly :)
 
 flag: helloworld
 
-where the "?" represents `0xdeadbeef` in Little Endian.
+where the "?" represents `0xdeadbeef` in little endian.
