--- a/writeups/2019-04-22-heap1.md
+++ b/writeups/2019-04-22-heap1.md
@@ -6,7 +6,7 @@ layout: post
 author: Robaire Galliath
 ---
 
-Before diving into heap1 it is important to understand what we have to work with. Looking at the source code it is clear that much like in heap0 we need to call the function winner to read the flag.
+Before diving into heap1 it is important to understand what we have to work with. Looking at the source code it is clear that much like in heap0 we need to call the function `winner` to read the flag.
 
 ```c
 void winner()
@@ -77,7 +77,7 @@ i1->name = malloc(8);
 
 So what exactly does that look like in memory? I used the gef plugin for gdb to get a nice printout of the heap right after all four objects are malloc'd. 
 
-```python
+```ruby
 Chunk(addr=0x804b008, size=0x10, flags=PREV_INUSE)
     [0x0804b008     01 00 00 00 18 b0 04 08 00 00 00 00 11 00 00 00    ................]
 Chunk(addr=0x804b018, size=0x10, flags=PREV_INUSE)
@@ -91,14 +91,14 @@ Chunk(addr=0x804b048, size=0x20fc0, flags=PREV_INUSE)  ←  top chunk
 
 There is a lot going on here so let's break it down by chunk.
 
-```python
+```ruby
 Chunk(addr=0x804b008, size=0x10, flags=PREV_INUSE)
     [0x0804b008     01 00 00 00 18 b0 04 08 00 00 00 00 11 00 00 00    ................]
 ```
 
 This first chunk represents the first `internet` struct. It begins at address `0x804b008` and is sixteen bytes long. The first four bytes are the `priority` integer, and in this case it has been set to 1, `01 00 00 00`. The next four bytes, `18 b0 04 08`, is the pointer to `name`. Then there are eight extra bytes that store some metadata about the chunk, but that is not important and can be ignored.
 
-```python
+```ruby
 Chunk(addr=0x804b018, size=0x10, flags=PREV_INUSE)
     [0x0804b018     00 00 00 00 00 00 00 00 00 00 00 00 11 00 00 00    ................]
 ```
@@ -117,7 +117,7 @@ strcpy(i2->name, argv[2]);
 
 But for now lets read in some simple inputs and see what happens. In this case heap1 was given `aaaaaaaa` and `bbbbbbbb` as command line arguments. Looking at the heap after the calls to `strcpy` we can clearly see the strings we provided as series of 61's and 62's.
 
-```python
+```ruby
 Chunk(addr=0x804b008, size=0x10, flags=PREV_INUSE)
     [0x0804b008     01 00 00 00 18 b0 04 08 00 00 00 00 11 00 00 00    ................]
 Chunk(addr=0x804b018, size=0x10, flags=PREV_INUSE)
@@ -139,7 +139,7 @@ The address `strcpy` will write to is stored in i1. In this case it is `0x0804b0
 
 Remember how `strcpy` will write as many bytes as you tell it to? Let's see what happens when we pass it more than sixteen bytes (the total size of chunk 2).
 
-```python
+```ruby
 Chunk(addr=0x804b008, size=0x10, flags=PREV_INUSE)
     [0x0804b008     01 00 00 00 18 b0 04 08 00 00 00 00 11 00 00 00    ................]
 Chunk(addr=0x804b018, size=0x10, flags=PREV_INUSE)
@@ -154,7 +154,7 @@ Chunk(addr=0x804b048, size=0x20fc0, flags=PREV_INUSE)  ←  top chunk
 The seventeenth `a` got written into the chunk for `i2`. If we wrote a few more bytes we could overwrite the address stored in `i2` to point anywhere we want. Then the second call to `strcpy` will write to that new address instead of writing into chunk 4 like it should. This gives us the power to write what ever we want, where ever we want.
 
 As an example lets use `python -c "print 'a'*20 + '\x10\x10\x10\x10'"` as our input.
-```python
+```ruby
 Chunk(addr=0x804b008, size=0x10, flags=PREV_INUSE)
     [0x0804b008     01 00 00 00 18 b0 04 08 00 00 00 00 11 00 00 00    ................]
 Chunk(addr=0x804b018, size=0x10, flags=PREV_INUSE)
