Little more formatting

--- a/writeups/2019-04-22-heap1.md
+++ b/writeups/2019-04-22-heap1.md
@@ -135,7 +135,7 @@ It is important to understand what exactly is happening when `strcopy` is called
 strcpy(i1->name, argv[1]);
 ```
 
-The address `strcpy` will write to is stored in i1. In this case it is `0x0804b018`. `strcpy` will then start writing bytes beginning at that address.
+The address `strcpy` will write to is stored in `i1`. In this case it is `0x0804b018`. `strcpy` will then start writing bytes beginning at that address.
 
 Remember how `strcpy` will write as many bytes as you tell it to? Let's see what happens when we pass it more than sixteen bytes (the total size of chunk 2).
 
@@ -168,9 +168,13 @@ Now the second call to `strcpy` will write our b's to address `0x10101010`.
 If we know where the top of the stack is, we can now use this method to overwrite the return address so that when `main` exits, `winner` is called instead. We have used this technique several times already. Using gdb we can find out the address of `winner` is `0x804854b`. So we need to write that somewhere near the top of the stack. 
 
 So our first arugment needs to overwrite the address stored in the second struct.
-`python -c "print 'a'*20 + '\x??\x??\x??\x??'"`
+```python
+python -c "print 'a'*20 + '\x??\x??\x??\x??'"
+```
 
 And the second argument needs to be the address of `winner`.
-`python -c "print '\x4b\x85\x04\x08'"`
+```python
+python -c "print '\x4b\x85\x04\x08'"
+```
 
 (To make things a little easier you might want to write more than one copy of `0x804854b`.) 
